Fixed results list spacing bug.

--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -1,5 +1,6 @@
 .app-container {
   height: 100vh;
+  max-height: 100vh;
   background-size: cover;
   background-attachment: fixed;
   background-color: #0093e9;
@@ -10,6 +11,9 @@
   display: flex;
   flex-flow: row wrap;
   justify-content: center;
+}
+.search-form .search-input {
+  margin-top: 2%;
 }
 .results-container {
   height: 100%;
