--- a/src/components/PreviewPlayer/index.css
+++ b/src/components/PreviewPlayer/index.css
@@ -1,14 +1,27 @@
 .preview-container {
   width: 100%;
-  height: 64px;
 }
 .preview {
   width: 100%;
+  display: flex;
+  flex-flow: row wrap;
 }
 .player {
   width: 25%;
 }
-.cover-art {
-  border: 1px solid red;
-  width: 21%;
+.cover-img-container {
+  max-height: 64px;
+  display: flex;
+  flex-flow: row nowrap;
+  justify-content: flex-start;
+}
+.cover-img {
+  display: block;
+  width: 60%;
+  max-width: 100%;
+  max-height: 64px;
+  object-fit: contain;
+}
+.cover-title {
+  width: 49%;
 }
