--- a/src/components/Results/index.css
+++ b/src/components/Results/index.css
@@ -1,14 +1,16 @@
 .results-list-container {
-  width: 71%;
+  width: 100%;
   max-height: 44em;
+  margin-top: 2.5%;
   overflow-y: auto;
   display: flex;
   flex-flow: row wrap;
   justify-content: space-evenly;
-  transform: perspective(2700px) rotate3d(0, 1, 0, 18deg);
+  /* transform: perspective(2700px) rotate3d(0, 1, 0, 18deg); */
 }
 .single-result {
   width: 26%;
+  margin: 2% 0 0 0;
   display: flex;
   flex-flow: column wrap;
   align-items: center;
